Fixed About Us formatting, Register Button overlapping with Submit button isssue fixed, Mobile navigation adjusted to correct position, Service changed to Build & Grow

--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -4,6 +4,7 @@
 
 .carousel .control-dots {
   margin: 60px auto;
+  opacity: 0;
 }
 
 .carousel li.slide img {
